# idcard_generator

./: .gitignore  README.md  build-dev.bat  build-macos.bat  build-macos.sh  build-windows.bat  build.bat  gui.spec  main.py  main.spec  pyproject.toml  requirements.txt  setup.py
.pip/: pip.bat  pip.conf
idcard_generator/: __init__.py  custom_utils.py  face_opencv.py  gui.py  gui.spec  id_card_gui.py  id_card_utils.py  id_card_utils_test.py  key_listen.py  loading_alert.py  name_utils.py  utils.py
script/: build-dev.bat  build-release-upx.bat  build-release-upxn.bat  build-release-upxnz.bat  build-release.bat  build-test.bat
utils/: res_util.py
